# SmartTools

./: CMakeLists.txt  kernel.hpp  library.cpp
smart_android/: smart_android_backup_tampered_information.hpp  smart_android_config.hpp  smart_android_customer_check_unlock.hpp  smart_android_environment.hpp  smart_android_everything.hpp  smart_android_local_active.hpp  smart_android_remote_active_0.hpp  smart_android_remote_active_1.hpp  smart_android_sensor.hpp  smart_android_sp_tampered_log.hpp
smart_jni/: smart_jni_config.hpp  smart_jni_environment.hpp  smart_jni_environment_get.hpp  smart_jni_everything.hpp  smart_jni_local_active.hpp  smart_jni_log.hpp  smart_jni_sensor.hpp  smart_jni_sp_tampered_log.hpp  smart_jni_system_call.hpp  smart_jni_thread_loop.hpp
smart_resouces/: smart_resouces_android_files_operator.hpp  smart_resouces_errors.hpp  smart_resouces_status.hpp
smart_test_resouce/: CMakeLists.txt  smart_utils_test.cpp  test_config_file
smart_utils/: smart_utils_log.hpp  smart_utils_math.hpp  smart_utils_simple_http.hpp  smart_utils_socket_based_on_linux.hpp  smart_utils_socket_ssl_based_on_mbedtls.hpp  smart_utils_strings.hpp  smart_utils_thread_loop.hpp
